--- a/src/components/styles/top-nav.css
+++ b/src/components/styles/top-nav.css
@@ -12,3 +12,6 @@
   right: 5px;
   top: 5px;
 }
+.top-nav:hover {
+  background: black;
+}
